# rag-youtube

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  loaded.json.backup  pyproject.toml  pytest.ini  rag-youtube.sample.conf  requirements.txt  run_fastapi.sh  schema.sql  start_faiss.py  test_ask.py  test_faiss_rag.py  test_faiss_simple.py  test_runner.sh  test_summary.md
docs/: README.md  design.md  feature.md  gemini-token-optimization.md  implementation.md  model-strategy.md  openai-token-optimization.md  temperature-parameter-guide.md
docs/content-filtering/: README.md  implementation-guide.md  overview.md  technical-reference.md  user-guide.md
docs/faiss-rag/: README.md  architecture.md  faiss-design.md  faiss-feature.md  faiss-implementation.md  setup-guide.md
docs/ingestion-reports/: spotgamma-ingestion-report-2025-01-10.md
docs/playlist/: design.md  feature.md  implementation.md
docs/playlist-filtering/: implementation-summary.md  testing-checklist.md
prompts/: base.txt  combine.txt  sourced.txt
public/: dashboard.html  index.html
public/css/: dashboard.css  index.css  main.css
public/js/: chain-viewer.vue  chain.vue  code-viewer.vue  configuration.vue  dashboard.js  evaluation-viewer.vue  index.js  main.js  object-viewer.vue  prompt.vue  step.vue
src/: README.md  agent_base.py  agent_base_faiss.py  agent_eval.py  agent_eval_faiss.py  agent_load_faiss.py  agent_qa_faiss.py  app.py  app_faiss.py  callback.py  chain_base.py  chain_eval_qa.py  chain_qa_conversation.py  chain_qa_sources.py  config.py  database.py  document_loader.py  document_loader_faiss.py  download_captions.py  downloader.py  list_videos.py  migrate_faiss_to_chroma.py  utils.py  vector_store_faiss.py
src/api/: __init__.py  config_fastapi.py  filters.py  main.py  models.py  rag_engine.py
src/core/: config.py  consts.py  llm_provider.py  utils.py
src/data_pipeline/: document_loader_faiss.py  download_captions.py  list_videos.py  metadata_enhancer.py  playlist_fetcher.py  simple_faiss_loader.py
src/legacy/: document_loader.py
src/legacy/agents/: base.py  base_faiss.py  eval_faiss.py  load.py  load_faiss.py  qa.py  qa_faiss.py
src/legacy/chains/: base.py  eval_criteria.py  qa_base.py
src/vector_stores/: faiss.py  migrate_faiss_to_chroma.py
static/: app.js  index.html  style.css
test/: README.md  TEST_SUITE_UPDATE.md  compare.py  conftest.py  run_all_tests.py  run_tests.sh  test_agent_qa.py  test_basic_functionality.py  test_basic_functionality_fastapi.py  test_chains.py  test_comprehensive.py  test_end_to_end.py  test_faiss_rag.py  test_faiss_simple.py  test_fastapi.py  test_filtering.py  test_helpers.py  test_minimal.py  test_performance.py  test_pytest_core.py  test_suite.py  test_summary.md  test_vector_store.py
