[project]
name = "rag-youtube"
version = "0.1.0"
description = "RAG system for YouTube channel analysis using FAISS and OpenAI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core dependencies for OpenAI-based setup
    "google-api-python-client",
    "requests",
    "openai",
    "yt-dlp",
    # FAISS for vector storage
    "faiss-cpu",
    # Additional utilities
    "numpy",
    "pandas",
    # FastAPI and related packages
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest",
    "black",
    "isort", 
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88