[project]
name = "rag-youtube"
version = "0.1.0"
description = "RAG system for YouTube channel analysis using FAISS and OpenAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core dependencies for multi-provider setup
    "google-api-python-client",
    "requests",
    "openai",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "yt-dlp",
    # FAISS for vector storage
    "faiss-cpu",
    # Additional utilities
    "numpy",
    "pandas",
    # FastAPI and related packages
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "black",
    "isort", 
    "flake8",
    "psutil",  # For memory monitoring in performance tests
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov",  # Coverage reporting
    "psutil",      # Memory monitoring
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88